<resources>
    <string name="app_name">Latihan Nav Drawer</string>
    <string name="home">Home</string>
    <string name="cycling">Cycling</string>
    <string name="bus">Bus</string>
    <string name="plane">Plane</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rateUs">Rate Us</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>